k8s/facility-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facility-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facility-service
  template:
    metadata:
      labels:
        app: facility-service
    spec:
      containers:
      - name: facility-service
        image: kasd0134/msa-facilityservice:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: facility-service
spec:
  selector:
    app: facility-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
