k8s/kafka-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-service
  template:
    metadata:
      labels:
        app: kafka-service
    spec:
      containers:
      - name: kafka-service
        image: kasd0134/msa-kafkaservice:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
spec:
  selector:
    app: kafka-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
