k8s/mongodb-services.yaml
# Facility Service MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-facility
spec:
  type: NodePort
  selector:
    app: mongodb-facility
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30017
---
# Park Service MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-park
spec:
  type: NodePort
  selector:
    app: mongodb-park
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30018
---
# Structure Manager MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-structure
spec:
  type: NodePort
  selector:
    app: mongodb-structure
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30019
---
# Ticket Service MongoDB
apiVersion: v1
kind: Service
metadata:
  name: mongodb-ticket
spec:
  type: NodePort
  selector:
    app: mongodb-ticket
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
      nodePort: 30020
