k8s/redis-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-service
  template:
    metadata:
      labels:
        app: redis-service
    spec:
      containers:
      - name: redis-service
        image: kasd0134/msa-redisservice:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /redis/health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /redis/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
