k8s/structure-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: structure-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: structure-manager
  template:
    metadata:
      labels:
        app: structure-manager
    spec:
      containers:
      - name: structure-manager
        image: kasd0134/msa-structuremanager:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /structure/health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /structure/health
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: structure-manager
spec:
  selector:
    app: structure-manager
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
