k8s/ticket-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket-service
  template:
    metadata:
      labels:
        app: ticket-service
    spec:
      containers:
      - name: ticket-service
        image: kasd0134/msa-ticketservice:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-service
spec:
  selector:
    app: ticket-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
